packaging: go back to single project layout in case it might help
Tried to get jlink working on the multiproject layout but failed.