@@ -8,29 +8,65 @@ buildscript {
     }
 }
 
-subprojects {
-    repositories {
-        mavenCentral()
-        maven {
-            url = "https://oss.sonatype.org/content/repositories/snapshots"
-        }
-    }
-    apply plugin: "kotlin"
+plugins {
+    id "application"
+    id "org.openjfx.javafxplugin" version "0.0.8"
+}
 
-    dependencies {
-        compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-        compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
-        testCompile "junit:junit:4.11"
-        testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    }
+apply plugin: "kotlin"
 
-    compileKotlin {
-        kotlinOptions.jvmTarget = "1.8"
+repositories {
+    mavenCentral()
+    maven {
+        url = "https://oss.sonatype.org/content/repositories/snapshots"
     }
+}
 
-    compileTestKotlin {
-        kotlinOptions.jvmTarget = "1.8"
+defaultTasks "run"
+
+mainClassName = "midituutti.MidiTuuttiKt"
+
+run {
+    doFirst {
+        jvmArgs = [
+                "--module-path", classpath.asPath,
+                "--add-modules=javafx.base,javafx.controls,javafx.graphics"
+        ]
     }
+}
+
+jar {
+    archivesBaseName = "midi-tuutti"
+    manifest { attributes "Main-Class": "midituutti.MidiTuuttiKt" }
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+}
+
+javafx {
+    version = "11.0.2"
+    modules = ["javafx.controls", "javafx.graphics"]
+}
+
+dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
+
+    compile "no.tornado:tornadofx:2.0.0-SNAPSHOT"
+    // Tornado depends on these. Let's make sure they have the same version as our kotlin.
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+    compile files("libs/java-midi-decoder-0.2.0.jar")
+
+    testCompile "junit:junit:4.11"
+    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
 }
 
 wrapper {
